--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@popperjs/core": "^2.4.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jquery": "^3.5.1",
     "ngx-bootstrap": "^3.1.1",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
