--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@popperjs/core": "^2.4.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
